# aacurx-weather-pipeline

./: .env.example  .gitignore  AGENTS.md  INTERVIEW_NOTES.md  README.md  SECURITY.md  city_geocode_overrides.csv.example  config.py  extract_weather.py  geocode_cities.py  http_utils.py  load_consultations.py  main.py  pyproject.toml  requirements.txt  run_pipeline.py
.github/workflows/: ci.yml
analysis/: weather_vs_consultations.sql
docs/: architecture.md  data_dictionary.md
sql/: fct_daily_consultation_weather.sql  stg_consultations.sql  stg_weather.sql
tests/: test_extract_weather.py  test_geocode_cities.py  test_http_utils.py  test_load_consultations.py  test_pipeline_integration.py
